tests/error/11.program
{
    c = 3;
    a = b + 5 / c + c ** 10;
}
